# ssod

./: .gdbargs  .gitattributes  .gitignore  CMakeLists.txt  CNAME  README.md  advanced_table.html  assassin.html  background.html  barbarian.html  darkelf.html  enemies.html  human.html  info.html  killed.html  lang.json  parafix.php  profs.html  run.sh  scripts.html  sentry-poster.php  sentry-symbols.sh  taghelp.html  test.html  thief.html  tkb.txt  translatebot.php  warrior.html  wizard.html  woodsman.html  words.txt
cgi-bin/: Main.cpp  config.h  cron.conf  gameobjects.h  html.h  statupdate.pl
docs/: achievement-events.md  index.md  paragraph.md
docs/beginners/: creating_game_locations.md  narrative_style_guide.md  paragraph_language_description.md
docs/js-scripting/: achievement-events.md  achievement_keys_guide.md  common_scripting_patterns.md  game_keys_guide.md  (+5 more)
docs/tags/: 2d6.md  (+34 more)
errors/: 500.html
manticore/: .gitignore  bulk_lore_loader.php  docker-compose.yml  setup.sh
old/: FAQ.RTF  README.md  dwarf.html  elf.html  encyclopaedia.html  garneth.html  goblin.html  grimoire.html  index.html  lesserorc.html  mercenary.html  orc.html  races.html  test2.html
src/: achievement.cpp  aes.cpp  book_reader.cpp  botlist.cpp  campfire.cpp  combat.cpp  command.cpp  commandline.cpp  component_builder.cpp  compress.cpp  config.cpp  database.cpp  game.cpp  game_date.cpp  game_dice.cpp  game_enums.cpp  game_player.cpp  game_util.cpp  grimoire.cpp  guild.cpp  inventory.cpp  lang.cpp  listeners.cpp  logger.cpp  main.cpp  neutrino_api.cpp  npc.cpp  paragraph.cpp  parser.cpp  quest.cpp  regex.cpp  sentry.cpp  sha256.cpp  thread_pool.cpp  wildcard.cpp
utils/: .gitignore  README.md  books.php  cooking.php  cooking2.php  defaultsfix.php  food.json  hunting.php  pricing.php
(+2536 files in other folders)
